# AI-Resume-Roaster

./: .gitattributes  .gitignore  README.md  ai_client.py  config.py  main.py  pyproject.toml  requirements.txt  styles.css
src/ai_roaster/: ai_client.py  file_processor.py  style_loader.py
